--- a/infrastructure-common/pom.xml
+++ b/infrastructure-common/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.omnipotentpocket</groupId>
+        <groupId>io.github.infrastructure</groupId>
         <artifactId>infrastructure</artifactId>
         <version>1.0.0.RELEASE</version>
     </parent>
