--- a/pom.xml
+++ b/pom.xml
@@ -228,10 +228,10 @@
             <url>https://central.sonatype.com/</url>
         </snapshotRepository>
     </distributionManagement>
-    <url>https://github.com/immeasu/infrastructure/tree/spring-2.1.x</url>
+    <url>https://github.com/immeasu/infrastructure</url>
     <scm>
         <!--项目访问url -->
-        <url>https://github.com/immeasu/infrastructure/tree/spring-2.1.x</url>
+        <url>https://github.com/immeasu/infrastructure</url>
         <!--项目访问url.git结尾 -->
         <connection>scm:git:https://github.com/immeasu/infrastructure.git</connection>
         <!--项目访问url.git结尾 -->
@@ -244,7 +244,7 @@
             <name>immeasu</name>
             <email>immeasu@163.com</email>
             <!--项目访问url -->
-            <url>https://github.com/immeasu/infrastructure/tree/spring-2.1.x</url>
+            <url>https://github.com/immeasu/infrastructure</url>
             <timezone>+8</timezone>
         </developer>
     </developers>
